--- a/src/styles/results.scss
+++ b/src/styles/results.scss
@@ -38,71 +38,70 @@
     display: block;
     letter-spacing: 5px;
     text-align: center;
-  }
 
-  h1 span {
-    position: relative;
-    top: 0px;
-    display: inline-block;
-    animation: bounce 0.3s ease infinite alternate;
-    font-size: 25px;
-    color: purple;
-    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc, 0 5px 0 #ccc, 0 6px 0 transparent,
-      0 7px 0 transparent, 0 8px 0 transparent, 0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
-  }
+    span {
+      position: relative;
+      top: 0px;
+      display: inline-block;
+      animation: bounce 0.3s ease infinite alternate;
+      font-size: 25px;
+      color: purple;
+      text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc, 0 5px 0 #ccc, 0 6px 0 transparent,
+        0 7px 0 transparent, 0 8px 0 transparent, 0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
+    }
 
-  h1 span:nth-child(2) {
-    animation-delay: 0.1s;
-  }
+    span:nth-child(2) {
+      animation-delay: 0.1s;
+    }
 
-  h1 span:nth-child(3) {
-    animation-delay: 0.2s;
-  }
+    span:nth-child(3) {
+      animation-delay: 0.2s;
+    }
 
-  h1 span:nth-child(4) {
-    animation-delay: 0.3s;
-  }
+    span:nth-child(4) {
+      animation-delay: 0.3s;
+    }
 
-  h1 span:nth-child(5) {
-    animation-delay: 0.4s;
-  }
+    span:nth-child(5) {
+      animation-delay: 0.4s;
+    }
 
-  h1 span:nth-child(6) {
-    animation-delay: 0.5s;
-  }
+    span:nth-child(6) {
+      animation-delay: 0.5s;
+    }
 
-  h1 span:nth-child(7) {
-    animation-delay: 0.6s;
-  }
+    span:nth-child(7) {
+      animation-delay: 0.6s;
+    }
 
-  h1 span:nth-child(8) {
-    animation-delay: 0.2s;
-  }
+    span:nth-child(8) {
+      animation-delay: 0.2s;
+    }
 
-  h1 span:nth-child(9) {
-    animation-delay: 0.3s;
-  }
+    span:nth-child(9) {
+      animation-delay: 0.3s;
+    }
 
-  h1 span:nth-child(10) {
-    animation-delay: 0.4s;
-  }
+    span:nth-child(10) {
+      animation-delay: 0.4s;
+    }
 
-  h1 span:nth-child(11) {
-    animation-delay: 0.5s;
-  }
+    span:nth-child(11) {
+      animation-delay: 0.5s;
+    }
 
-  h1 span:nth-child(12) {
-    animation-delay: 0.6s;
-  }
+    span:nth-child(12) {
+      animation-delay: 0.6s;
+    }
 
-  h1 span:nth-child(13) {
-    animation-delay: 0.7s;
-  }
+    span:nth-child(13) {
+      animation-delay: 0.7s;
+    }
 
-  h1 span:nth-child(14) {
-    animation-delay: 0.8s;
+    span:nth-child(14) {
+      animation-delay: 0.8s;
+    }
   }
-
   @keyframes bounce {
     100% {
       top: -20px;
